feat: Refactor project structure and update dependencies
Restructures the project to separate frontend and backend into distinct packages. Updates various dependencies to their latest compatible versions and adjusts import maps in `index.html` for CDN resolution. Introduces Docker Compose for local development and deployment.

--- a/index.html
+++ b/index.html
@@ -25,18 +25,20 @@
         },
       }
     </script>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "recharts": "https://aistudiocdn.com/recharts@^3.2.1",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.25.0",
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "sqlite3": "https://aistudiocdn.com/sqlite3@^5.1.7",
     "sqlite": "https://aistudiocdn.com/sqlite@^5.1.1",
-    "sqlite3": "https://aistudiocdn.com/sqlite3@^5.1.7"
+    "vite": "https://aistudiocdn.com/vite@^7.1.10",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4"
   }
 }
 </script>
